message html + bouton

--- a/templates/mail/verifEmail.html
+++ b/templates/mail/verifEmail.html
@@ -400,6 +400,25 @@
                         suivant dans votre navigateur. Lien : </p>
                       <p>%LINK%</p>
                       <br>
+                      <br>
+                      <p>Si vous souhaitez en savoir plus sur notre API, vous pouvez consulter la documentation en cliquant sur le bouton ci-dessous ou sur le lien suivant :</p>
+                      <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
+                        <tbody>
+                          <tr>
+                            <p>%LINKDOC%</p>
+                            <td align="left">
+                              <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+                                <tbody>
+                                  <tr>
+                                    <td> <a href="%LINK%" target="_blank">Naviguer à travers la documentation</a> </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <br>
                       <p>Si vous n'avez pas demandé à valider cette adresse, vous pouvez ignorer cet e-mail.</p>
                       <p>Merci,</p>
                       <p>Votre équipe API CRM-WS.</p>
