--- a/templates/mail/verifEmail.html
+++ b/templates/mail/verifEmail.html
@@ -410,7 +410,7 @@
                               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                 <tbody>
                                   <tr>
-                                    <td> <a href="%LINK%" target="_blank">Naviguer à travers la documentation</a> </td>
+                                    <td> <a href="%LINKDOC%" target="_blank">Naviguer à travers la documentation</a> </td>
                                   </tr>
                                 </tbody>
                               </table>
