change on appointement

--- a/templates/mail/verifEmail.html
+++ b/templates/mail/verifEmail.html
@@ -396,7 +396,7 @@
                           </tr>
                         </tbody>
                       </table>
-                      <p>Si vous n'arrivez pas a valider votre mail via le bouton. Veuillez copier/coller le lien
+                      <p>Si vous n'arrivez pas à valider votre mail via le bouton. Veuillez copier/coller le lien
                         suivant dans votre navigateur. Lien : </p>
                       <p>%LINK%</p>
                       <br>
